// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notes Component renders div with className="msgbox msgbox--inline" if summary prop is true 1`] = `
<div>
  <div
    className="msgbox msgbox--inline"
  >
    <h4>
      Notes
    </h4>
    <span
      className="count"
    >
      0
    </span>
  </div>
</div>
`;

exports[`Notes Component renders div with className="notes" if summary prop is false 1`] = `
<div>
  <div
    className="notes"
  >
    <header>
      <h4>
        Notes
      </h4>
    </header>
  </div>
</div>
`;
